Corrected image sizes, alignment and text beneath

--- a/style.css
+++ b/style.css
@@ -34,19 +34,25 @@
 body {
   font-family: circular, sans-serif;
   font-weight: lighter;
+
 }
 
 .image-container {
-  width: 700px;
-  height: 700px;
-  overflow: hidden;
+  display: flex;
+  justify-content: space-between;
+  overflow-x: auto;
+  padding: 0; /* Remove padding to make images touch the margins */
 }
 
 .image-container img {
-  width: 100%;
-  height: 100%;
+  flex: 1 0 auto; /* This will make the images flexible, allowing them to grow and shrink as needed */
+  width: 100%; /* This will make the image take up the full width of the container */
+  height: 80vw; /* This will make the image square */
+  object-fit: cover; /* This will ensure that the image covers the entire container */
 }
 
+
+/*menu*/
 .image-row {
   display: flex;
   justify-content: space-between;
@@ -57,15 +63,24 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 30%;
-  height: 30%;
-  margin: 10px 30px 10px 10px;
-  
+  width: 57px; /* Adjust this value to make the items smaller */
+  height: 57px; /* Adjust this value to make the items smaller */
+  margin: 10px 130px 70px 10px;
 }
 
 .image-item p {
-  font-size: 30px;
+  font-size: 28px;
+  font-weight: normal !important;
   white-space: nowrap;
+  margin: 7px;
+  color: #616161;
+}
+
+.image-item img {
+  width: 100%; /* This will make the image take up the full width of the .image-item container */
+  height: 100%; /* This will make the image take up the full height of the .image-item container */
+  object-fit: contain; /* This will ensure that the image is resized to fit the container while maintaining its aspect ratio */
+  filter: grayscale(80%);
 }
 
 .bottom-rectangle {
@@ -76,23 +91,34 @@ body {
   background-color: #ffff; 
 }
 
+
+/* Images and text beneath*/
 .element-description {
-  font-size: large;
+  font-size: 14px;
 }
 
+/*footer row list*/
 .footer-row-list {
   display: flex;
   flex-wrap: wrap;
+  padding: 0 50px
 }
 
 .footer-row-list p {
   width: 50%;
-  font-size: 40px;
+  font-size: 35px;
+  
 }
 
 hr {
   border: none;
   height: 0.7px;
   background-color: grey;
-  margin: 30px
+  margin: 50px
+}
+
+.inspiration-title {
+  font-size: 40px;
+  font-weight: 40;
+  margin: 50px 0 0 50px;
 }
